# pytest-sb-ansible

./: .sb-repo.yaml  README.md  pyproject.toml
.github/terraform/: main.tf  provider.tf
.github/workflows/: copy.yaml  main.yaml
pytest_sb_ansible/: ansible.py  vagrant.py
tests/: Vagrantfile
tests/roles/my_vm_role/tasks/: main.yml
tests/tests/: conftest.py  test_ansible_vagrant.py
